@@ -1,5 +1,13 @@
 2007-07-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
+	* Tomboy/Tomboy.cs, Tomboy/RemoteControl.cs: Renaming
+	  SetNoteContentsCompleteXml to SetNoteCompleteXml, and adding
+	  GetNoteCompleteXml (not implemented yet) to the RemoteControl. 
+	  Also added GetTagsForNote, AddTagToNote, RemoveTagFromNote, and
+	  GetAllNotesWithTag.
+
+2007-07-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
 	* Tomboy.mdp, Tomboy/Makefile.am, Tomboy/Gnome.Keyring/NoteItemData.cs,
 	  Tomboy/Gnome.Keyring/sync-tree.sh, Tomboy/Gnome.Keyring/ItemACL.cs,
 	  Tomboy/Gnome.Keyring/AccessRights.cs,
